2006-05-14  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>

	* gas/mips/mips.exp: Run new tests.
	* gas/mips/mips16e.s, gas/mips/mips16e.d, gas/mips/mips16e-64.s,
	gas/mips/mips16e-64.d, gas/mips/mips16e-64.l: New tests.

2006-05-11  Paul Brook  <paul@codesourcery.com>

	* gas/arm/local_function.d: New test.
	* gas/arm/local_function.s: New test.

2006-05-11  Thiemo Seufer  <ths@mips.com>

	* gas/mips/jal-range.l: Don't check the range of j or jal
	addresses.

2006-05-09  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/x86-64-gidt.d: Adjusted.

2006-05-09  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run x86-64-gidt.

	* gas/i386/x86-64-gidt.d: New file.
	* gas/i386/x86-64-gidt.s: Likewise.

2006-05-09  David Ung  <davidu@mips.com>

	* gas/mips/jal-range.l: Only warn about an out-of-range j or jal
	address.

2006-05-08  Thiemo Seufer  <ths@mips.com>

	* gas/mips/mips32.s, gas/mips/mips32.d: Extend testcase to check
	larger offset arguments for cache instructions.

2006-05-08  Thiemo Seufer  <ths@mips.com>
            Nigel Stephens  <nigel@mips.com>
            David Ung  <davidu@mips.com>

	* gas/mips/smartmips.s, gas/mips/smartmips.d: New smartmips test.
	* gas/mips/mips.exp: Run smartmips test.

2006-05-05  Julian Brown  <julian@codesourcery.com>

	* gas/arm/vfp-neon-overlap.s: New test. Overlapping VFP/Neon
	instructions.
	* gas/arm/vfp-neon-overlap.d: Expected output of above.
	* gas/arm/vfp1xD.d: Test for fldmx/fstmx.
	* gas/arm/vfp1xD_t2.d: Likewise.
	* gas/arm/vfpv3-32drs.d: Likewise.

2006-05-05  Nigel Stephens  <nigel@mips.com>

	* gas/mips/noreorder.s, gas/mips/noreorder.d: New test for
	reorder/noreorder corner case.
	* gas/mips/mips.exp: Run new test.
	
2006-05-04  Kazu Hirata  <kazu@codesourcery.com>

	* gas/arm/armv1.d (error-output): New.
	* gas/arm/armv1.l: New.
	* gas/arm/thumb32.d (error-output): New.
	* gas/arm/thumb32.l: New.

2006-05-04  Thiemo Seufer  <ths@mips.com>