@@ -1,4 +1,5 @@
-#as: -mips2 -mvxworks-pic -mabi=32 -EB
+#as: -mips2 -mvxworks-pic -mabi=32 -EL
+#source: vxworks1.s
 #objdump: -dr
 
 .*:     file format .*
@@ -45,27 +46,27 @@ Disassembly of section \.text:
 #
 .*:	8f810000 	lw	at,0\(gp\)
 			.*: R_MIPS_GOT16	\.data
-.*:	88240000 	lwl	a0,0\(at\)
-.*:	98240003 	lwr	a0,3\(at\)
+.*:	88240003 	lwl	a0,3\(at\)
+.*:	98240000 	lwr	a0,0\(at\)
 #
 # ulw $4,global
 #
 .*:	8f810000 	lw	at,0\(gp\)
 			.*: R_MIPS_GOT16	global
-.*:	88240000 	lwl	a0,0\(at\)
-.*:	98240003 	lwr	a0,3\(at\)
+.*:	88240003 	lwl	a0,3\(at\)
+.*:	98240000 	lwr	a0,0\(at\)
 #
 # usw $4,local
 #
 .*:	8f810000 	lw	at,0\(gp\)
 			.*: R_MIPS_GOT16	\.data
-.*:	a8240000 	swl	a0,0\(at\)
-.*:	b8240003 	swr	a0,3\(at\)
+.*:	a8240003 	swl	a0,3\(at\)
+.*:	b8240000 	swr	a0,0\(at\)
 #
 # usw $4,global
 #
 .*:	8f810000 	lw	at,0\(gp\)
 			.*: R_MIPS_GOT16	global
-.*:	a8240000 	swl	a0,0\(at\)
-.*:	b8240003 	swr	a0,3\(at\)
+.*:	a8240003 	swl	a0,3\(at\)
+.*:	b8240000 	swr	a0,0\(at\)
 	\.\.\.
